--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -18,100 +18,11 @@
             font-family: 'Brams';
             margin: 0;
             padding: 0;
-            overflow: hidden; /* Prevent scroll */
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            background-color: #1f1f1f; /* Set a dark background color */
-        }
-
-        .profile-picture-container {
-            position: relative;
-            width: 200px;
-            height: 200px;
-        }
-
-        .circle {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            filter: url(#wavy) blur(1px);
-        }
-
-        .circle:before, .circle:after {
-            content: "";
-            position: absolute;
-            top: 15px;
-            left: 15px;
-            right: 15px;
-            bottom: 15px;
-            border: 10px solid #FF69B4; /* Pink color */
-            border-radius: 50%;
-            box-shadow: 0 0 50px #FF69B4,
-                        inset 0 0 50px #FF69B4;
-            -webkit-box-reflect: below 10px linear-gradient(transparent, transparent, #0002);
-        }
-
-        .circle:before {
-            animation: animate 5s linear infinite;
-        }
-
-        .circle:after {
-            box-shadow: 0 0 50px #FF69B4,
-                        inset 0 0 50px #FF69B4;
-        }
-
-        .circle:nth-child(2):before {
-            animation-delay: -2.5s;
-        }
-
-        @keyframes animate {
-            0% {
-                box-shadow: 0 0 50px #FF69B4,
-                            inset 0 0 50px #FF69B4;
-                filter: hue-rotate(0deg);
-            }
-            20% {
-                box-shadow: 0 0 40px #FF69B4,
-                            inset 0 0 60px #FF69B4;
-            }
-            40% {
-                box-shadow: 0 0 40px #FF69B4,
-                            inset 0 0 80px #FF69B4;
-            }
-            60% {
-                box-shadow: 0 0 80px #FF69B4,
-                            inset 0 0 80px #FF69B4;
-            }
-            80% {
-                box-shadow: 0 0 100px #FF69B4,
-                            inset 0 0 100px #FF69B4;
-            }
-            100% {
-                box-shadow: 0 0 50px #FF69B4,
-                            inset 0 0 50px #FF69B4;
-                filter: hue-rotate(360deg);
-            }
-        }
-
-        .profile-picture {
-            width: 100%;
-            height: 100%;
-            border-radius: 50%; /* Circular shape */
-            overflow: hidden; /* Ensure image does not overflow */
-        }
-
-        .profile-picture img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            border-radius: 50%; /* Circular shape */
-        }
-
-        svg {
-            width: 0;
-            height: 0;
+            overflow-y: auto; /* Enable vertical scroll */
+            overflow-x: hidden; /* Prevent horizontal scroll */
+            color: #fff;
+            position: relative; /* For layering content over the video */
+            min-height: 100vh; /* Ensure body takes at least full viewport height */
         }
 
         #loading-screen {
@@ -167,10 +78,10 @@
 
         @keyframes glowHeader {
             0% {
-                box-shadow: 0 0 10px rgba(204, 94, 255, 0); /* No glow */
+                box-shadow: 0 0 10px rgba(204, 94, 255, 0); /* No glow (pink/purple glow) */
             }
             100% {
-                box-shadow: 0 0 20px rgba(204, 94, 255, 0.8); /* Glow effect */
+                box-shadow: 0 0 20px rgba(204, 94, 255, 0.8); /* Glow effect (pink/purple glow) */
             }
         }
 
@@ -197,6 +108,25 @@
             width: 90%; /* Adjust width as needed */
         }
 
+        .profile-picture {
+            max-width: 12vw; /* Responsive size */
+            margin-top: 4px;
+            margin-bottom: 4px;
+            border-radius: 50%; /* Circular shape */
+            overflow: hidden; /* Ensure image does not overflow */
+            position: relative; /* Position relative for absolute border */
+            box-shadow: 0 0 20px rgba(204, 94, 255, 0.8); /* Glow effect (pink/purple glow) */
+            border: 4px solid rgba(204, 94, 255, 0.8); /* Pink/purple border */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .profile-picture img {
+            width: 100%;
+            border-radius: 50%; /* Circular shape */
+        }
+
         .intro {
             max-width: 90vw; /* Responsive size */
             padding: 20px;
@@ -206,12 +136,12 @@
         }
 
         .intro h2 {
-            font-size: 3em;
+            font-size: 2em;
             margin-top: 0px;
         }
 
         .intro p {
-            font-size: 4em; /* Title size */
+            font-size: 3em; /*Title size*/
             line-height: 1;
             margin-top: 5px;
             margin-bottom: 0px;
@@ -283,105 +213,142 @@
             margin: 0;
         }
 
+        .valorant-logo {
+            width: 100px;
+            margin-top: 20px;
+        }
+
         @keyframes slideIn {
             0% {
                 right: -100%; /* Start off-screen to the right */
                 opacity: 0;
             }
             100% {
-                right: 0; /* Slide in to the center */
+                right: 0; /* Slide in to the right */
                 opacity: 1;
             }
         }
 
-        @media only screen and (max-width: 600px) {
-            .intro p {
-                font-size: 2em; /* Adjust font size for smaller screens */
-            }
-
-            .links a {
-                font-size: 2.5em; /* Adjust font size for smaller screens */
+        @media (max-width: 1200px) {
+            /* Larger devices adjustments */
+            .content {
+                width: 90%;
+                max-width: 1000px;
             }
         }
 
-        @media only screen and (max-width: 400px) {
-            .intro h2 {
-                font-size: 2.5em; /* Adjust font size for smaller screens */
+        @media (max-width: 767px) {
+            /* Smaller devices adjustments */
+            .content {
+                width: 90%;
+                max-width: 90%;
+            }
+
+            .profile-picture {
+                max-width: 40vw; /* Increase profile picture size on smaller screens */
             }
 
             .intro p {
-                font-size: 1.5em; /* Further adjust font size for smaller screens */
+                font-size: 2em; /* Decrease font size */
+            }
+
+            .links {
+                margin-top: 5px; /* Reduce margin top for links */
             }
 
             .links a {
-                font-size: 2em; /* Further adjust font size for smaller screens */
+                font-size: 1.5em; /* Decrease font size */
+                padding: 10px 20px; /* Adjust padding */
+            }
+
+            header h1 {
+                text-align: center; /* Center align header text */
+                width: auto; /* Reset width to auto */
+            }
+
+            footer {
+                position: static; /* Ensure footer is static on smaller screens */
+                margin-top: 20px; /* Add margin to separate from content */
             }
         }
     </style>
 </head>
 <body>
-    <div class="profile-picture-container">
-        <div class="circle"></div>
-        <div class="circle"></div>
-        <div class="profile-picture">
-            <img src="your-profile-picture.jpg" alt="Profile Picture">
-        </div>
-    </div>
-
-    <svg>
-        <filter id="wavy">
-            <feTurbulence x="0" y="0" baseFrequency="0.009" numOctaves="5" seed="2">
-                <animate attributeName="baseFrequency" dur="60s" values="0.02;0.005;0.02" repeatCount="indefinite"></animate>
-            </feTurbulence>
-            <feDisplacementMap in="SourceGraphic" scale="30"></feDisplacementMap>
-        </filter>
-    </svg>
-
     <div id="loading-screen">
-        <h1>Loading...</h1>
-        <video id="loading-video" autoplay loop muted>
-            <source src="loading.mp4" type="video/mp4">
-            Your browser does not support the video tag.
+        <video id="loading-video" autoplay muted loop playsinline>
+            <source src="Loading.mp4" type="video/mp4">
         </video>
+        <h1>Loading<span id="ellipsis"></span></h1>
     </div>
-
-    <video id="video-background" autoplay loop muted>
-        <source src="video.mp4" type="video/mp4">
-        Your browser does not support the video tag.
+    <video id="video-background" autoplay muted loop playsinline>
+        <source src="Main.mp4" type="video/mp4">
     </video>
-
-    <video id="main-video" autoplay loop muted>
-        <source src="main.mp4" type="video/mp4">
-        Your browser does not support the video tag.
+    <video id="main-video" autoplay muted loop playsinline>
+        <source src="Main.mp4" type="video/mp4">
     </video>
-
-    <header>
-        <h1>Welcome to My Profile</h1>
-    </header>
-
     <div id="main-content">
+        <header>
+            <h1>Ah, skill issue I'm afraid.</h1>
+        </header>
         <div class="content">
+            <div class="profile-picture">
+                <img src="448969993_1005954630665614_4173930242296266244_n.jpg" alt="Profile Picture">
+            </div>            
             <div class="intro">
-                <h2>Hello, I'm Your Name</h2>
-                <p>Welcome to my profile. I'm passionate about...</p>
+                <h2>ngleeqthai</h2>
+                <p>social media:</p>
             </div>
-
             <div class="links">
-                <a href="#">Link 1</a>
-                <a href="#">Link 2</a>
-                <a href="#">Link 3</a>
-                <a href="#">Link 4</a>
-                <a href="#">Link 5</a>
+                <a href="https://www.facebook.com/ngleeqthai/" target="_blank">Facebook</a>
+                <a href="https://www.instagram.com/_ngleeq.thai/?hl=en" target="_blank">Instagram</a>
+                <a href="https://steamcommunity.com/id/ngleeqthai0212/" target="_blank">Steam</a>
+                <a href="https://specs.gg/ngleeq.thai" target="_blank">My Settings</a>
+                <a href="https://tracker.gg/valorant/profile/riot/WWWWWWWWWWWWWWW%231234/overview" target="_blank">Valorant Tracker</a>
             </div>
         </div>
+        <footer>
+            <p>&copy; WWWWWWWWWWWWWWW</p>
+        </footer>
     </div>
-
-    <footer>
-        <p>&copy; 2024 Your Name. All rights reserved.</p>
-    </footer>
 
     <script>
-        // JavaScript code can be added here if needed
+        document.addEventListener("DOMContentLoaded", function() {
+            // Delay before starting loading video
+            setTimeout(function() {
+                // Show and start loading video from the 3rd second instantly
+                const loadingVideo = document.getElementById("loading-video");
+                loadingVideo.currentTime = 3; // Start from the 3rd second
+                loadingVideo.style.display = "block"; // Show loading video
+                loadingVideo.play(); // Start playing loading video
+            }, 3000); // 3000 milliseconds delay before showing loading video
+
+            // Hide the loading screen and show the video background and main content after 6 seconds from showing loading video
+            setTimeout(function() {
+                document.getElementById("loading-screen").style.display = "none";
+                document.getElementById("loading-video").style.display = "none"; // Hide loading video
+                document.getElementById("video-background").style.filter = "none"; // Remove blur effect
+                document.getElementById("main-video").style.display = "block"; // Display main video
+                document.getElementById("main-video").play(); // Play main video
+                document.getElementById("main-content").style.display = "block";
+            }, 9000); // 9000 milliseconds = 3 seconds delay + 6 seconds
+
+            // Ellipsis animation (now faster, every 166 milliseconds)
+            const ellipsis = document.getElementById('ellipsis');
+            let count = 0;
+            setInterval(() => {
+                count++;
+                if (count === 1) {
+                    ellipsis.textContent = '';
+                } else if (count === 2) {
+                    ellipsis.textContent = '.';
+                } else if (count === 3) {
+                    ellipsis.textContent = '..';
+                } else if (count === 4) {
+                    ellipsis.textContent = '...';
+                    count = 0;
+                }
+            }, 166); // Change every 0.166 seconds (166 milliseconds)
+        });
     </script>
 </body>
 </html>
