--- a/index.html
+++ b/index.html
@@ -271,111 +271,85 @@
                 margin-top: 20px; /* Add margin to separate from content */
             }
         }
-
-        /* Wavy Fire Ring Effect */
-        .circle {
-            position: relative;
-            width: 600px;
-            height: 600px;
-            filter: url(#wavy) blur(1px);
-        }
-
-        .circle:before {
-            content: "";
-            position: absolute;
-            top: 100px;
-            left: 100px;
-            right: 100px;
-            bottom: 100px;
-            border: 20px solid #FFF;
-            border-radius: 50%;
-            box-shadow: 0 0 50px #0F0,
-                  inset 0 0 50px #0F0,
-                  0 0 100px #0F0,
-                  inset 0 0 100px #0F0;
-            animation: spin 5s linear infinite;
-        }
-
-        .circle:after {
-            content: "";
-            position: absolute;
-            top: 100px;
-            left: 100px;
-            right: 100px;
-            bottom: 100px;
-            border: 20px solid #F00;
-            border-radius: 50%;
-            box-shadow: 0 0 50px #F00,
-                  inset 0 0 50px #F00,
-                  0 0 100px #F00,
-                  inset 0 0 100px #F00;
-            animation: spin 5s linear infinite;
-        }
-
-        @keyframes spin {
-            from {
-                transform: rotate(0deg);
-            }
-            to {
-                transform: rotate(360deg);
-            }
-        }
     </style>
 </head>
 <body>
     <div id="loading-screen">
-        <h1>Loading...</h1>
-        <video id="loading-video" autoplay muted>
-            <source src="loading.mp4" type="video/mp4">
-            Your browser does not support the video tag.
+        <video id="loading-video" autoplay muted loop playsinline>
+            <source src="Loading.mp4" type="video/mp4">
         </video>
+        <h1>Loading<span id="ellipsis"></span></h1>
     </div>
-
-    <video id="video-background" autoplay loop muted>
-        <source src="background.mp4" type="video/mp4">
-        Your browser does not support the video tag.
+    <video id="video-background" autoplay muted loop playsinline>
+        <source src="Main.mp4" type="video/mp4">
     </video>
-
+    <video id="main-video" autoplay muted loop playsinline>
+        <source src="Main.mp4" type="video/mp4">
+    </video>
     <div id="main-content">
         <header>
-            <h1>Welcome to my world</h1>
+            <h1>Ah, skill issue I'm afraid.</h1>
         </header>
         <div class="content">
-            <div class="circle profile-picture">
-                <img src="path/to/your/profile-picture.jpg" alt="Profile Picture">
-            </div>
+            <div class="profile-picture">
+                <img src="448969993_1005954630665614_4173930242296266244_n.jpg" alt="Profile Picture">
+            </div>            
             <div class="intro">
-                <h2>Hello, I'm ngleeqthai!</h2>
-                <p>Gamer. Developer. Creator.</p>
+                <h2>ngleeqthai</h2>
+                <p>social media:</p>
             </div>
             <div class="links">
-                <a href="https://www.facebook.com/ngleeqthai/">Facebook</a>
-                <a href="https://www.instagram.com/_ngleeq.thai/?hl=en">Instagram</a>
-                <a href="https://steamcommunity.com/id/ngleeqthai0212/">Steam</a>
-                <a href="https://specs.gg/ngleeq.thai">Setting</a>
-                <a href="https://tracker.gg/valorant/profile/riot/WWWWWWWWWWWWWWW%231234/overview">Tracker</a>
+                <a href="https://www.facebook.com/ngleeqthai/" target="_blank">Facebook</a>
+                <a href="https://www.instagram.com/_ngleeq.thai/?hl=en" target="_blank">Instagram</a>
+                <a href="https://steamcommunity.com/id/ngleeqthai0212/" target="_blank">Steam</a>
+                <a href="https://specs.gg/ngleeq.thai" target="_blank">My Settings</a>
+                <a href="https://tracker.gg/valorant/profile/riot/WWWWWWWWWWWWWWW%231234/overview" target="_blank">Valorant Tracker</a>
             </div>
         </div>
         <footer>
-            <p>&copy; 2024 ngleeqthai. All rights reserved.</p>
+            <p>&copy; WWWWWWWWWWWWWWW</p>
         </footer>
     </div>
 
-    <video id="main-video" autoplay muted>
-        <source src="main-video.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-    </video>
-
     <script>
-        // Function to hide loading screen and show main content
-        function showMainContent() {
-            document.getElementById('loading-screen').style.display = 'none';
-            document.getElementById('main-content').style.display = 'block';
-            document.getElementById('main-video').style.display = 'block';
-        }
+        document.addEventListener("DOMContentLoaded", function() {
+            // Delay before starting loading video
+            setTimeout(function() {
+                // Show and start loading video from the 3rd second instantly
+                const loadingVideo = document.getElementById("loading-video");
+                loadingVideo.currentTime = 3; // Start from the 3rd second
+                loadingVideo.style.display = "block"; // Show loading video
+                loadingVideo.play(); // Start playing loading video
+            }, 3000); // 3000 milliseconds delay before showing loading video
 
-        // Hide loading screen and show main content after a delay (e.g., 3 seconds)
-        setTimeout(showMainContent, 3000); // 3000 milliseconds = 3 seconds
+            // Hide the loading screen and show the video background and main content after 6 seconds from showing loading video
+            setTimeout(function() {
+                document.getElementById("loading-screen").style.display = "none";
+                document.getElementById("loading-video").style.display = "none"; // Hide loading video
+                document.getElementById("video-background").style.filter = "none"; // Remove blur effect
+                document.getElementById("main-video").style.display = "block"; // Display main video
+                document.getElementById("main-video").play(); // Play main video
+                document.getElementById("main-content").style.display = "block";
+            }, 9000); // 9000 milliseconds = 3 seconds delay + 6 seconds
+
+            // Ellipsis animation (now faster, every 166 milliseconds)
+            const ellipsis = document.getElementById('ellipsis');
+            let count = 0;
+            setInterval(() => {
+                count++;
+                if (count === 1) {
+                    ellipsis.textContent = '';
+                } else if (count === 2) {
+                    ellipsis.textContent = '.';
+                } else if (count === 3) {
+                    ellipsis.textContent = '..';
+                } else if (count === 4) {
+                    ellipsis.textContent = '...';
+                    count = 0;
+                }
+            }, 166); // Change every 0.166 seconds (166 milliseconds)
+        });
     </script>
 </body>
 </html>
+
